--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,13 @@
 <footer class="center">
-  <div class="measure">
-    <small>
-      Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-      &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">GitHub</a>.
-    </small>
+    <div class="measure">
+      <small>
+        Drop me an <a href="mailto:{{ site.email }}">email</a><br>
+        &lt;/&gt; available on <a href="https://github.com/jackturnbull/jackturnbull.github.io">Github</a>.
+      </small>
+    </div>
   </div>
 </footer>
+
 {% if site.enable_anchorjs %}<!-- AnchorJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.0.0/anchor.min.js"></script>
 <script>
