--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,3 @@
-{% for page in site.pages %}
-    {% if page.tags contains "about" %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
-    {% endif %}
-{% endfor %}
-{% for page in site.pages %}
-    {% if page.tags contains "contact" %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
-    {% endif %}
-{% endfor %}
+<a href="{{ site.baseurl }}/who/">Who</a>
+<a href="{{ site.twitter_url }}">Twitter</a>
+<a href="{{ site.github_url }}">Github</a>
